tests/miniJava/neg/006917_mutation.MiniJava
public int [] java ( ) { return 0 ; }
